--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
 </head>
 
-<body>
-    <div class="container-fluid container-md ">
+<body class="">
+    <div class="container-fluid container-md">
                    <!-- xs NAV BAR -->
-                <nav class=" bg-light  fixed-bottom d-sm-none">
+                <nav class=" bg-light xs-nav fixed-bottom    d-sm-none">
                     <div class="container-fluid">
                         <div class="row h-50">
                             <div class="col-3">
@@ -38,7 +38,7 @@
         <div class="row ">
             <!-- LEFT SIDE BAR -->
             <div
-                class="d-none col-sm-2  d-sm-block  col-md-3 col-lg-3 d-flex flex-column text-sm-end text-md-start  align-items-lg-start  border-end ">
+                class="d-none col-sm-2  d-sm-block  col-md-3 col-lg-3 d-flex flex-column text-sm-end text-md-start  align-items-lg-start left_sidebar border-end ">
                 <div>
                     <span><i class="fa-brands fa-twitter display-5 text-info py-3  "></i></span>
                     
@@ -82,7 +82,7 @@
             </div>
 
             <!-- MAIN SECTION -->
-            <div class="col-12 col-sm-10 col-md-9 col-lg-6  main_bar">
+            <div class="col-12 col-sm-10 col-md-9 col-lg-6  main_bar ">
                 <div class="row d-flex justify-content-between align-items-center ps-1">
                     <div class="col-1 pt-2">
                         <div><span class="fs-4 fw-bold">Home</span></div>
